arreglar codificacion archivos txt salida, ajustar layout sel conf y card, fijar sel vel a landscape, actualizar gradle

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,8 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".SeleccionarVelocidad"
-            android:label="@string/title_activity_seleccionar_velocidad"></activity>
+            android:label="@string/title_activity_seleccionar_velocidad"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
